force-app/main/default/objects/Vehicle_Inventory_Item__c/Vehicle_Inventory_Item__c.object-meta.xml
<CustomObject>
    <description>Items that are stored in the Warehouse and Reassignable to vehicles</description>
    <label>Inventory Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>