force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Collection associated to the item</description>
    <label>Collection</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>