force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Consumable_Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Quantity_Available__c</fullName>
    <description>Quantity of units available</description>
    <label>Availabe Consumable Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>