force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Inventory Item</description>
    <label>Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>