force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <description>Estimated day that Item will be delivered</description>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>