force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Manufacturer of Inventory Item</description>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>