force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/On_hand_Quantity__c.field-meta.xml
<CustomField>
    <fullName>On_hand_Quantity__c</fullName>
    <description>Quantity of units available</description>
    <label>On-hand Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>