force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order number of the purchased Inventory Item</description>
    <label>Order Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>