force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/ProductLink__c.field-meta.xml
<CustomField>
    <fullName>ProductLink__c</fullName>
    <description>URL for Inventory Item purchase page or manufacturer page</description>
    <inlineHelpText>Link to the product purchase page or manufacturer website page</inlineHelpText>
    <label>Product Link</label>
    <type>Url</type>
</CustomField>