force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Purchase date of the Inventory Item</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>