force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Purchased_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Quantity__c</fullName>
    <description>Number of items purchased</description>
    <label>Purchased Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>