force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of ordered assets</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researching</fullName>
                <default>true</default>
                <label>Researching</label>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Stocked</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
                <label>Stocked</label>
            </value>
            <value>
                <fullName>Depleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>