force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total Price of the ordered quantity of Inventory Items</description>
    <label>Total Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>