force-app/main/default/objects/Vehicle_Inventory_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of inventory</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Warehouse_Item_Type</valueSetName>
    </valueSet>
</CustomField>