force-app/main/default/objects/Vehicle_Inventory_Item__c/recordTypes/Accessory.recordType-meta.xml
<RecordType>
    <fullName>Accessory</fullName>
    <active>true</active>
    <description>Accessory that is used for a job and reassociated to the vehicle permanently</description>
    <label>Accessory</label>
</RecordType>