force-app/main/default/objects/Vehicle_Inventory_Item__c/recordTypes/Consumable.recordType-meta.xml
<RecordType>
    <fullName>Consumable</fullName>
    <active>true</active>
    <description>Consumables are used for maintenance until total inventory is used up</description>
    <label>Consumable</label>
</RecordType>