force-app/main/default/objects/Vehicle_Inventory_Item__c/recordTypes/Part.recordType-meta.xml
<RecordType>
    <fullName>Part</fullName>
    <active>true</active>
    <description>Part that is used for a job and reassociated to the vehicle permanently</description>
    <label>Part</label>
</RecordType>