force-app/main/default/objects/Vehicle_Inventory_Item__c/recordTypes/Tool.recordType-meta.xml
<RecordType>
    <fullName>Tool</fullName>
    <active>true</active>
    <description>Tool used for maintenance</description>
    <label>Tool</label>
</RecordType>